--- a/CompanyEmployeesCoreWebAPI/appsettings.json
+++ b/CompanyEmployeesCoreWebAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=.; database=CompanyEmployeeCoreWebAPI; Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
