--- a/CompanyEmployeesCoreWebAPI/CompanyEmployeesCoreWebAPI.csproj
+++ b/CompanyEmployeesCoreWebAPI/CompanyEmployeesCoreWebAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreRateLimit" Version="4.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Marvin.Cache.Headers" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.8" />
