--- a/CompanyEmployeesCoreWebAPI/appsettings.json
+++ b/CompanyEmployeesCoreWebAPI/appsettings.json
@@ -10,5 +10,10 @@
   "ConnectionStrings": {
     "sqlConnection": "server=.; database=CompanyEmployeeCoreWebAPI; Integrated Security=true"
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:5001",
+    "expires": 5
+  },
   "AllowedHosts": "*"
 }
